Apartment controller stub
